--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     </head>
     <body>
 	<!-- add map title -->
-    	<center><h1> MOUNT CALVARY CEMETERY </h1></center>
-	<center><h3> 410 Flatbush Road, Route 32, Kingston NY </h3></center>
+        <!-- <center><h1> MOUNT CALVARY CEMETERY </h1></center> -->
+        <!-- <center><h3> 410 Flatbush Road, Route 32, Kingston NY </h3></center> -->
 
         <div id="map" >
              <!-- add north arrow -->
