--- a/index.html
+++ b/index.html
@@ -52,17 +52,10 @@
             margin: 0;
         }
         </style>
-        <title>Mount Calvary Search</title>
+        <title>Mt Calvary Search</title>
     </head>
     <body>
-	<!-- add map title -->
-        <!-- <center><h1> MOUNT CALVARY CEMETERY </h1></center> -->
-        <!-- <center><h3> 410 Flatbush Road, Route 32, Kingston NY </h3></center> -->
-
-        <div id="map" >
-             <!-- add north arrow -->
-             <img src="resources/North-Blue.png" width="5%" height="10%"></img>
-
+        <div id="map">
             <div id="popup" class="ol-popup">
                 <a href="#" id="popup-closer" class="ol-popup-closer"></a>
                 <div id="popup-content"></div>
@@ -78,8 +71,8 @@
         <script src="resources/horsey.min.js"></script>
         <script src="resources/ol3-search-layer.js"></script>
         <script src="./resources/ol-layerswitcher.js"></script>
-        <script src="layers/Sections_0.js"></script><script src="layers/Deceased_1.js"></script>
-        <script src="styles/Sections_0_style.js"></script><script src="styles/Deceased_1_style.js"></script>
+        <script src="layers/Sections_0.js"></script><script src="layers/Graves_1.js"></script>
+        <script src="styles/Sections_0_style.js"></script><script src="styles/Graves_1_style.js"></script>
         <script src="./layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>
